--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,12 @@
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
                     <h3>Perfect quality. Perfect style. Personal approach.</h3>
-                    <p class="about_describe-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias,
-                        assumenda cum dolorem ducimus
-                        enim eveniet incidunt iure magnam neque nesciunt nihil officiis omnis perferendis quas
-                        reiciendis repellat sint suscipit voluptates.</p>
+
+                    <p class="about_describe-text">GET NAILED is a high-design nail studio founded by Karina, a beauty
+                        blogger. The studio’s goal is to transcend and transform every aspect of the traditional
+                        manicure experience. GET NAILED offers a seasonal collection of thoughtfully-edited nail designs
+                        and colors reminiscent of runway and editorial trends to discerning women seeking edgy
+                        elegance. </p>
                 </div>
             </div>
         </div>
@@ -55,6 +57,7 @@
                             <div class="about_slider__desc">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi, eligendi
                                     exercitationem ipsam iste molestias necessitatibus</p>
+
                                 <p> obcaecati odio perferendis
                                     praesentium provident quae quibusdam quo repellat repudiandae soluta, unde,
                                     veritatis vitae.</p>
@@ -64,6 +67,7 @@
                             <div class="about_slider__img">1</div>
                             <div class="about_slider__desc">
                                 <p>Lorem ipsum dolor sicing elit.eligendi</p>
+
                                 <p> obcaecati odio perferendis
                                     veritatis vitae.</p>
                             </div>
@@ -84,14 +88,16 @@
 
 //= template/contact_block.html
 
-<section class="bottom_nav inverse">
-    <ul>
-        <li class="bottom_nav__item"><a href="#">about us</a></li>
-        <li class="bottom_nav__item"><a href="#">servises</a></li>
-        <li class="bottom_nav__item"><a href="#">poducts</a></li>
-        <li class="bottom_nav__item"><a href="#">contact us</a></li>
-        <li class="bottom_nav__item"><a class="book_now" href="#">book now</a></li>
-    </ul>
+<section class="bottom_nav__wrap">
+    <div class="container">
+        <ul class="bottom_nav !inverse add-margin">
+            <li class="bottom_nav__item"><a href="#">about us</a></li>
+            <li class="bottom_nav__item"><a href="#">servises</a></li>
+            <li class="bottom_nav__item"><a href="#">poducts</a></li>
+            <li class="bottom_nav__item"><a href="#">contact us</a></li>
+            <li class="bottom_nav__item"><a class="book_now" href="#">book now</a></li>
+        </ul>
+    </div>
 </section>
 
 //= template/footer.html
