--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
     </section>
     <!-- end about_describe -->
     <!-- about_slider -->
-    <section class="slider">
+    <section class="studio_slider">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
@@ -78,13 +78,85 @@
         </div>
     </section>
     <!-- end about_slider -->
+    <!-- our team -->
+    <section class="our_team">
+        <div class="team_slider">
+            <div class="team_slider__item">
+                <div class="img_wrap"><img src="assets/images/temp/header_bg.jpg" alt=""></div>
+                <div class="name"><b>Maria</b><br><span>manicure master</span></div>
+            </div>
+            <div class="team_slider__item">
+                <div class="img_wrap"><img src="assets/images/temp/header_bg.jpg" alt=""></div>
+                <div class="name"><b>Maria</b><br><span>manicure master</span></div>
+            </div>
+            <div class="team_slider__item">
+                <div class="img_wrap"><img src="assets/images/temp/header_bg.jpg" alt=""></div>
+                <div class="name"><b>Maria</b><br><span>manicure master</span></div>
+            </div>
+            <div class="team_slider__item">
+                <div class="img_wrap"><img src="assets/images/temp/header_bg.jpg" alt=""></div>
+                <div class="name"><b>Maria</b><br><span>manicure master</span></div>
+            </div>
+            <div class="team_slider__item">
+                <div class="img_wrap"><img src="assets/images/temp/header_bg.jpg" alt=""></div>
+                <div class="name"><b>Maria</b><br><span>manicure master</span></div>
+            </div>
 
-    <section style="height: 600px; background: #ccc">
 
+        </div>
     </section>
+    <!-- end our team -->
+    <!-- studio -->
+    <section class="studio">
+        <div class="section-title">Get naled studio</div>
+        <div class="studio_wrap">
+            <div class="container">
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+                <div class="studio_item">
+                    <img src="assets/images/temp/header_bg.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end studio -->
 
+
+    //= template/brands.html
 
 </main><!-- content-holder -->
+
 
 //= template/contact_block.html
 
@@ -95,7 +167,7 @@
             <li class="bottom_nav__item"><a href="#">servises</a></li>
             <li class="bottom_nav__item"><a href="#">poducts</a></li>
             <li class="bottom_nav__item"><a href="#">contact us</a></li>
-            <li class="bottom_nav__item"><a class="book_now" href="#">book now</a></li>
+            <li class="bottom_nav__item book_now"><a href="#">book now</a></li>
         </ul>
     </div>
 </section>
